Initial work for file system translation services